// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/v2/SegmentedControl > ObjectSegments 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-label="test"
      aria-orientation="vertical"
      class="charcoal-segmented-control"
      id="test-id"
      role="radiogroup"
    >
      <label
        aria-disabled="false"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          name="test-id"
          tabindex="0"
          type="radio"
          value="option1"
        />
        選択肢1
      </label>
      <label
        aria-disabled="false"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          name="test-id"
          tabindex="0"
          type="radio"
          value="option2"
        />
        選択肢2
      </label>
      <label
        aria-disabled="false"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          name="test-id"
          tabindex="0"
          type="radio"
          value="option3"
        />
        選択肢3
      </label>
      <label
        aria-disabled="true"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          disabled=""
          name="test-id"
          type="radio"
          value="option4"
        />
        選択肢4
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/v2/SegmentedControl > StringSegments 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-label="test"
      aria-orientation="vertical"
      class="charcoal-segmented-control"
      id="test-id"
      role="radiogroup"
    >
      <label
        aria-disabled="false"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          name="test-id"
          tabindex="0"
          type="radio"
          value="option1"
        />
        option1
      </label>
      <label
        aria-disabled="false"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          name="test-id"
          tabindex="0"
          type="radio"
          value="option2"
        />
        option2
      </label>
      <label
        aria-disabled="false"
        class="charcoal-segmented-control-radio__label"
        data-checked="false"
      >
        <input
          class="charcoal-segmented-control-radio__input"
          name="test-id"
          tabindex="0"
          type="radio"
          value="option3"
        />
        option3
      </label>
    </div>
  </div>
</div>
`;
